specify python version in the requirements

--- a/MPCdesig.html
+++ b/MPCdesig.html
@@ -35,7 +35,7 @@ modules.<br>
 &nbsp;<br>
 ##&nbsp;Requirements<br>
 &nbsp;<br>
--&nbsp;(Python&nbsp;3)&nbsp;argparse,&nbsp;numpy,&nbsp;re,&nbsp;sys&nbsp;&nbsp;<br>
+-&nbsp;(Python&nbsp;3.8)&nbsp;argparse,&nbsp;numpy,&nbsp;re,&nbsp;sys<br>
 &nbsp;<br>
 &nbsp;<br>
 ##&nbsp;Examples<br>
